<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_phone_value"
        android:inputType="textCapWords"
        android:key="phone"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_phone"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_url_value"
        android:inputType="textCapWords"
        android:key="url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_url"/>

    <Preference android:title="@string/pref_default"
                android:key="setDefault"
                android:summary="@string/pref_default_value"/>

</PreferenceScreen>
